<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.ryanrvldo.spreadspectrumsteganography.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_embedding"
        android:name="com.ryanrvldo.spreadspectrumsteganography.ui.EmbeddingFragment"
        android:label="@string/embedding"
        tools:layout="@layout/fragment_embedding" />
    <fragment
        android:id="@+id/nav_extraction"
        android:name="com.ryanrvldo.spreadspectrumsteganography.ui.ExtractingFragment"
        android:label="@string/extraction"
        tools:layout="@layout/fragment_extracting" />
</navigation>